# Project-Cortex

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  jest.config.mjs  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
.github/: dependabot.yml  dependency-review-config.yml
.github/codeql/: codeql-config.yml
.github/workflows/: pr-checks.yml  publish.yml
Documentation/: index.mdx  whats-new.mdx
Documentation/advanced-topics/: _category_.json  a2a-communication.mdx  context-chains.mdx  fact-integration.mdx  facts-vs-conversations.mdx  graph-capabilities.mdx  graph-database-integration.mdx  graph-integration.mdx  orchestration-observer.mdx  sessions-management.mdx
Documentation/api-reference/: a2a-communication.mdx  agent-management.mdx  artifacts-operations.mdx  attachments-operations.mdx  (+13 more)
convex-dev/: admin.ts  artifacts.ts  attachments.ts  conversationShares.ts  conversationSnapshots.ts  conversations.ts  facts.ts  memories.ts  schema.ts
cortex-sdk-python/: CHANGELOG.md  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cortex-sdk-python/cortex/: __init__.py  _convex_async.py  _utils.py  client.py  config.py  errors.py  types.py
cortex-sdk-python/cortex/agents/: __init__.py
cortex-sdk-python/cortex/artifacts/: __init__.py  validators.py
cortex-sdk-python/cortex/attachments/: __init__.py  validators.py
cortex-sdk-python/cortex/contexts/: __init__.py
cortex-sdk-python/cortex/conversations/: __init__.py  validators.py
cortex-sdk-python/cortex/facts/: __init__.py  conflict_prompts.py
cortex-sdk-python/cortex/graph/: __init__.py  batch_sync.py  errors.py
cortex-sdk-python/cortex/graph/adapters/: cypher.py
cortex-sdk-python/cortex/graph/schema/: init_schema.py
cortex-sdk-python/cortex/immutable/: __init__.py
cortex-sdk-python/cortex/memory/: __init__.py
cortex-sdk-python/cortex/memory/recall/: __init__.py  graph_enhancement.py
cortex-sdk-python/cortex/memory_spaces/: __init__.py  validators.py
cortex-sdk-python/cortex/mutable/: __init__.py  validators.py
cortex-sdk-python/cortex/sessions/: __init__.py
cortex-sdk-python/cortex/sharing/: __init__.py
cortex-sdk-python/cortex/users/: __init__.py
cortex-sdk-python/cortex/vector/: __init__.py  validators.py
cortex-sdk-python/scripts/: update-deps.py
cortex-sdk-python/tests/: test_a2a.py  test_agents.py  test_chatbot_belief_system.py  test_config.py  test_contexts.py  test_conversations.py  test_conversations_collaborative.py  test_conversations_shares.py  test_conversations_snapshots.py  test_conversations_visibility.py  test_cross_space_boundaries.py  test_facts.py  test_governance.py  test_hive_mode.py  test_immutable.py  test_memory.py  test_memory_observer.py  test_memory_openai.py  test_memory_spaces.py  test_memory_streaming.py  test_mutable.py  test_phase_orchestration.py  test_recall.py  test_state_transitions.py  test_types_orchestration.py  test_users.py  test_vector.py
cortex-sdk-python/tests/e2e/: test_artifacts_parity.py
cortex-sdk-python/tests/helpers/: __init__.py  assertions.py
cortex-sdk-python/tests/unit/: test_artifacts_sdk.py  test_artifacts_validators.py  test_attachments_sdk.py  test_attachments_validators.py
cortex-sdk-python/tests/unit/memory/recall/: test_graph_enhancement.py
scripts/: cleanup-test-data.ts
src/: config.ts  index.ts
tests/: chatbot-belief-system.test.ts  conversations-collaborative.test.ts  conversations-shares.test.ts  conversations-snapshots.test.ts  conversations-visibility.test.ts  cross-space-boundaries.test.ts  facts-conflict-resolution.test.ts  facts-revision-decisions.test.ts  facts-semantic-search.test.ts  facts-supersession-behavior.test.ts  gdprCascade.test.ts  integration.test.ts  memory-openai.test.ts  operation-sequences.test.ts  recall-integration.test.ts  recall-limits-integration.test.ts  state-transitions.test.ts
(+114 files in other folders)
